crates/nash-solve/tests/snapshots/inference__type_variable_names_do_not_imply_constraints-6.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nidentity : 'comparableish -> 'comparableish\nidentity x = x\nmain : unit\nmain = identity ()\n"
---
identity : forall comparableish. comparableish -> comparableish
main : unit
