crates/nash-solve/tests/snapshots/inference__type_variable_names_do_not_imply_constraints-7.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nidentity : 'appendableish -> 'appendableish\nidentity x = x\nmain = identity ()\n"
---
identity : forall appendableish. appendableish -> appendableish
main : unit
