crates/nash-solve/tests/snapshots/inference__type_variable_names_do_not_imply_constraints-8.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nidentity : 'compappendish -> 'compappendish\nidentity x = x\nmain : unit\nmain = identity ()\n"
---
identity : forall compappendish. compappendish -> compappendish
main : unit
