crates/nash-solve/tests/snapshots/inference__type_variable_names_do_not_imply_constraints.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nidentity : 'number -> 'number\nidentity x = x\nmain = identity ()\n"
---
identity : forall number. number -> number
main : unit
