crates/nash-solve/tests/snapshots/inference__typed_identity.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (id)\n\nid : 'a -> 'a\nid x = x\n"
---
id : forall a. a -> a
