crates/nash-solve/tests/snapshots/inference__unit_impl_syntax_matches_named_builtin.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep () where\n    keep x = x\nmain : Primitive.unit\nmain = keep ()\n"
---
main : unit
