crates/nash-solve/tests/snapshots/inference__unit_value.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (nothing)\n\nnothing = ()\n"
---
nothing : forall a. FromUnit a => a
